microservice/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mvc-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mvc-app
  template:
    metadata:
      labels:
        app: mvc-app
    spec:
      serviceAccountName: aws-test
      containers:
      - name: mvc-app
        image: 985809756777.dkr.ecr.us-east-1.amazonaws.com/microservice/my-mvc-app
        ports:
        - containerPort: 80
