microservice/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mvc-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mvc-app
  template:
    metadata:
      labels:
        app: mvc-app
    spec:
      containers:
      - name: mvc-app
        image: $(awsAccountId).dkr.ecr.us-east-1.amazonaws.com/$(ecrClientRepoName):$(imageTag)
        ports:
        - containerPort: 80
