microservice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mvc-app-service
spec:
  type: LoadBalancer
  selector:
    app: mvc-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
